test: Update WRK tests with real benchmark data and fix naming
- Rename test resources from *-output.txt to *-results.txt
- Update all test files with REAL benchmark data from actual runs
  - Real timestamps from actual executions (not fake data)
  - Real performance metrics from actual WRK benchmarks
  - Proper metadata structure with benchmark names
- Fix test assertions to expect IllegalStateException for missing metadata
- All 9 tests now pass with real data
- Pre-commit build successful with zero violations

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>